# clawdvault

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  test-realtime.mjs  vercel.json
.github/: dependabot.yml
.github/workflows/: anchor.yml  build.yml  lint.yml
app/: .env.example  .gitignore  .vade-report  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
app/prisma/: schema.prisma
app/public/: SKILL.md  manifest.json  openapi.yaml  robots.txt  skill.md
app/scripts/: backfill-candles.ts  backfill-initial-buys.ts  backfill-trades.ts  check-reserves.ts  debug-prices.ts  fix-candles.ts  generate-favicons.js  rebuild-candles.ts
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/components/: AgeGate.tsx  AnimatedSection.tsx  ChatAndTrades.tsx  ExplorerLink.tsx  Footer.tsx  GlassCard.tsx  Header.tsx  HomeSections.tsx  HomeStats.tsx  Pagination.tsx  PriceChart.tsx  SolPriceDisplay.tsx  TokenChat.tsx  WalletButton.tsx
app/src/contexts/: WalletContext.tsx
app/src/hooks/: useSolPrice.ts
app/src/lib/: auth.ts  candles.ts  db.ts  db.ts.bak  jupiter.ts  moltx-evm.ts  moltx.ts  prisma.ts  rate-limit.ts  raydium.ts  solana.ts  (+9 more)
docs/: API.md  SKILL.md  VERIFICATION.md
programs/clawdvault/: Cargo.toml
scripts/: initialize.ts  launch-clawdvault-token.ts  resize-config.ts  test-contract.ts  test-full-flow.ts  test-graduation.ts
supabase/: schema.sql
supabase/migrations/: 003_sol_price.sql  20260202_enable_realtime.sql
(+64 files in other folders)
