[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

# Pin problematic crates to pre-edition2024 versions
# blake3 moved to edition2024 in 1.8.3, so 1.8.2 should work
[workspace.dependencies]
blake3 = "=1.8.2"
constant_time_eq = "=0.3.1"
base64ct = "=1.6.0"
